--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-theme: jekyll-theme-minimal
+theme: jekyll-theme-cayman
 title: ADA DRACO Website
 description: A template website for ADA DRACO project
 show_downloads: True
